# langchain-lab

./: .editorconfig  .flake8  .gitignore  Dockerfile  Makefile  README.md  README_ZH.md  main.py  pyproject.toml
.github/workflows/: docker.yml  pr.yml  publish.yml
.streamlit/: config.toml
docs/: 人事制度-short.md  人事制度.md  人事制度.txt  开发者布道手册.txt
docs/prompts/: extract-conversation-output-json.txt  extract-identification-type.txt  flight-booking-agent.txt  guided-information-gathering.txt  improve-your-writing.txt  summarization.txt  two-stage-translation.txt
src/: __init__.py
src/langchain_lab/: __init__.py
src/langchain_lab/agent_tools/weather/: AMap_adcode_citycode.csv  weather.py
src/langchain_lab/core/: agents.py  audio.py  chat.py  chat_agent.py  chunking.py  conference.py  conversation.py  db.py  embedding.py  hub.py  huggingface.py  llm.py  parsing.py  qa.py  summary.py  translate.py
src/langchain_lab/core/prompts/: chat.py  stuff.py
src/langchain_lab/hub_offline/: hwchase17_openai-functions-agent_a1655024.json
src/langchain_lab/langchain_community/document_loaders/: recursive_url_loader.py
src/langchain_lab/langgraph/: draw_plantuml.py  main_multi.py  marketing_analysis_assistant.puml  marketing_analysis_assistant.py  sales_data.csv
src/langchain_lab/langgraph/marketing_analysis_assistant/: marketing_analysis_assistant.py
src/langchain_lab/langgraph/network_operations_analysis_assistant/: network_operations_analysis_assistant.pluml  network_operations_analysis_assistant.py
src/langchain_lab/scenarios/: chat.py  debug.py  document.py  sidebar.py
src/langchain_lab/scenarios/agents/: __init__.py
src/langchain_lab/scenarios/agents/langgraph_agent/: langgraph_demo_agent.py
src/langchain_lab/scenarios/agents/translation_agent/: system_prompt.txt  translation_english2chinese.py
src/langchain_lab/scenarios/agents/wikipedia_agent/: wikipedia_agent.py
tests/langchain_lab/core/: test_audio.py
tests/langchain_lab/langgraph/: sales_analysis_report.md  sales_analysis_report_gpt-3.5-turbo.md  sales_analysis_report_gpt-4-turbo.md  sales_analysis_report_gpt-4o.md  sales_analysis_report_gpt4.md  test_marketing_analysis_assistant.py
tests/langchain_lab/langgraph/marketing_analysis_assistant/: marketing_analysis_assistant_gpt-3.5-turbo.md  marketing_analysis_assistant_gpt-4-turbo.md  sales_analysis_report_gpt-3.5-turbo.md  sales_analysis_report_gpt-4-turbo.md  sales_analysis_report_gpt-4o.md  test_marketing_analysis_assistant.py
tests/langchain_lab/langgraph/network_operations_analysis_assistant/: test_network_operations_analysis_assistant.py
