[tool.poetry]
name = "langchain-lab"
version = "0.2.0"
description = ""
authors = ["Lei Zhang <zhanglei@apache.org>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{ include = "langchain_lab", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "1.36.0"
langchain = "0.2.6"
langchain-openai = "0.1.14"
langchain-experimental = "0.0.62"
langchainhub = "0.1.20"
langgraph = "0.1.5"
faiss-cpu = "1.7.4"
pandas = "2.2.2"
python-dotenv = "1.0.1"
docx2txt = "0.8"
pymupdf = "1.24.7"
sentence-transformers = "^2.2.2"
langdetect = "1.0.9"
chardet = "5.2.0"
beautifulsoup4 = "4.12.3"
SQLAlchemy = "2.0.22"
wikipedia = "1.4.0"
tabulate = "0.9.0"
openpyxl = "3.1.5"
grandalf = "0.8"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.poetry.group.lint.dependencies]
isort = "^5.12.0"
black = { version = "^23.1a1", allow-prereleases = true }
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 180

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
priority = "default"
